<resources>
    <string name="app_name">Easy Budget</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_categories">Categories</string>
    <string name="support_email">stacks@uci.edu</string>

    <string name="nav_balance">Balance</string>
    <string name="nav_enter_purchase">Enter Purchase</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_edit_budget">Change Budget</string>

    <string name="budget_amount_placeholder">$</string>
    <string name="btn_text_ftue_basic">Basic</string>
    <string name="btn_text_ftue_advanced">Categories</string>
    <string name="budget_amount_hint">Monthy Budget Amount</string>
    <string name="btn_finished_text">Finished</string>
    <string name="edit_advanced_budget_title">Edit Monthly Budget</string>
    <string name="edit_budget_help_text">Please note that you can always change your budget later by clicking Edit Budget in the menu</string>
    <string name="total_monthly_budget">Total Monthly Budget</string>
    <string name="spent_this_month">Spent</string>
    <string name="category_name_hint">Category Name</string>
    <string name="category_amount_hint">Amount</string>
    <string name="category_spinner_label">Category</string>
    <string name="category_default_label">Other</string>
    <string name="enter_purchase_title">Enter Purchase</string>


    <string name="toggle_monthly_reminder_label">Remind me every month starting on this date.</string>

    <!-- These are for the month view table -->
    <string name="category_table_header">Category</string>
    <string name="sum_table_header">Spent</string>
    <string name="budget_table_header">Budget</string>


    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_remind_me_transactions">Remind me to enter purchases</string>
    <string name="nav_audit_title">Audit</string>
    <string name="nav_view_all_purchases">All Purchases</string>
    <string name="purchase_name_hint">Purchase Name</string>
    <string name="add_receipt_button">Attach Receipt</string>
    <string name="open_receipt_with">View receipt image in</string>
    <string name="ftue_text">If you wish do a basic budget with no spending categories tap basic. If you wish to set spending categories each month tap categories.

    You can change this later by going to edit budget.</string>
        <string name="change_to_basic">If you wish do a basic budget with no spending categories tap basic.</string>
        <string name="change_to_advanced">If you wish to set spending categories each month tap categories.</string>

    <string-array name="pref_sync_remind_me_transactions_titles">
        <item>5 days</item>
        <item>10 days</item>
        <item>15 days</item>
        <item>20 days</item>
        <item>30 days</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_remind_me_transactions_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>-1</item>
    </string-array>
</resources>
