<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <TextView
        android:padding="5dp"
        android:text="@string/change_to_basic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/btn_text_ftue_basic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="changeToBasic"/>
    <RelativeLayout
        style="@style/standard_activity_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/advanced_budget_title"
            android:text="@string/edit_advanced_budget_title"
            style="@style/heading_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_finished"
            android:text="@string/btn_finished_text"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_spacing"
            android:onClick="finished"/>
        <TextView
            android:id="@+id/total_monthly_budget_text"
            android:layout_above="@id/btn_finished"
            style="@style/heading_three"
            android:layout_marginRight="@dimen/label_spacing"
            android:text="@string/total_monthly_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/total_monthly_budget_amount"
            android:layout_above="@id/btn_finished"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/total_monthly_budget_text"
            style="@style/heading_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/category_list"
            android:layout_marginTop="@dimen/label_spacing"
            android:layout_marginBottom="@dimen/label_spacing"
            android:layout_below="@id/advanced_budget_title"
            android:layout_above="@id/total_monthly_budget_text"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>
</LinearLayout>